--- a/styles/style.css
+++ b/styles/style.css
@@ -14,18 +14,46 @@ body {
 }
 
 .container {
-	margin: 1rem;
+	width: 900px;
+	
 	border: 2px solid black;
 }
 
 .flag {
-	height: 50%;
-	width: 50%;
+	height: 500px%;
+	width: 900px;
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
 }
 
-.feedback {
-	
+form {
+	width: 200px;
+	text-align: left;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 15px;
+}
+
+label {
+	display: block;
+	padding-left: 15px;
+	text-indent: -15px;
+}
+
+input {
+	width: 13px;
+	height: 13px;
+	padding: 0;
+	margin: 0;
+	margin-left: 45px;
+	vertical-align: bottom;
+	position: relative;
+	top: -1px;
+	overflow: hidden;
+}
+
+.feedback h6 {
+	display: inline;
+	padding: .5rem;
 }
