--- a/styles/style.css
+++ b/styles/style.css
@@ -13,10 +13,21 @@ body {
 	text-align: center;
 }
 
+.imageBox, .answerBox, .feedback {
+	display: none;
+}
+
+.questionNumber {
+	display: none;
+}
+
 .container {
 	width: 900px;
-	
-	border: 2px solid black;
+	border: .5px solid grey;	
+}
+
+.beginContainer {
+	text-align: center;
 }
 
 .flag {
@@ -27,7 +38,7 @@ body {
 	margin-right: auto;
 }
 
-form {
+.answerForm {
 	width: 200px;
 	text-align: left;
 	margin-left: auto;
@@ -41,16 +52,22 @@ label {
 	text-indent: -15px;
 }
 
-input {
-	width: 13px;
-	height: 13px;
+.answer {	
 	padding: 0;
 	margin: 0;
-	margin-left: 45px;
+	margin-left: 60px;
 	vertical-align: bottom;
 	position: relative;
 	top: -1px;
 	overflow: hidden;
+}
+
+.submitContainer {
+	text-align: center;
+}
+
+.submitButton {
+	margin: 0 auto;
 }
 
 .feedback h6 {
